--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,13 +22,14 @@
     "\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import OpenAI\n",
+    "from langchain.chains import LLMChain\n",
     "\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +48,17 @@
     "llm = OpenAI(temperature=0)\n",
     "prompt = PromptTemplate(\n",
     "    input_variables=[\"privacy_policy\"],\n",
-    "    template=\"\"\"Below is the privacy policy for a website. Answer the following questions with a yes or no answer about the policy. Include the question in the response. Quote excerpts to support your conclusion.\n",
+    "    template=\"\"\"\n",
+    "Below is the privacy policy for a website. Answer all questions about the policy.\n",
+    "Explain why your answer is correct.\n",
     "\n",
-    "1. What personal information do they collect?\n",
+    "1. What personal information does this website collect?\n",
     "\n",
     "2. What do they do with my personal information?\n",
     "\n",
     "3. Do they sell my personal information and to whom?\n",
+    "\n",
+    "4. Do they use my personal information as part of an advertisement network?\n",
     "\n",
     "PRIVACY POLICY:\n",
     "\n",
@@ -62,13 +67,12 @@
     "     \"\"\",\n",
     ")\n",
     "\n",
-    "from langchain.chains import LLMChain\n",
     "chain = LLMChain(llm=llm, prompt=prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -77,19 +81,47 @@
      "text": [
       "\n",
       "\n",
-      "Question: What personal information do they collect?\n",
-      "Yes, they collect personal information. Excerpt: \"To provide the Meta Products, we must process information about you. The types of information we collect depend on how you use our Products.\" \n",
+      "1. What personal information does this website collect?\n",
       "\n",
-      "Question: What do they do with my personal information?\n",
-      "Yes, they use personal information. Excerpt: \"We use the information we have (subject to choices you make) as described below and to provide and support the Meta Products and related services described in the Meta Terms and Instagram Terms.\" \n",
+      "This website collects information such as your name, email address, profile photo, Instagram username, bio, public profile information on Facebook, content you share on a Facebook Page, public Instagram account or any other public forum, such as Facebook Marketplace, and information about your active status or presence on the website. \n",
       "\n",
-      "Question: Do they sell my personal information and to whom?\n",
-      "No, they do not sell personal information. Excerpt: \"We don't sell any of your information to anyone, and we never will. We also impose strict restrictions on how our partners can use and disclose the data we provide.\"\n"
+      "2. What do they do with my personal information?\n",
+      "\n",
+      "The website uses the personal information they collect to provide and support the Meta Products and related services described in the Meta Terms and Instagram Terms. This includes providing analytics and measurement reports to partners, providing advertisers with reports about the kinds of people seeing their ads and how their ads are performing, confirming which ads led you to make a purchase or take an action with an advertiser, and providing vendors and service providers with information and content to support their business. \n",
+      "\n",
+      "3. Do they sell my personal information and to whom?\n",
+      "\n",
+      "No, they do not sell any of your information to anyone. \n",
+      "\n",
+      "4. Do they use my personal information as part of an advertisement network?\n",
+      "\n",
+      "Yes, they use your personal information as part of an advertisement network. They provide advertisers with reports about the kinds of people seeing their ads\n"
      ]
     }
    ],
    "source": [
-    "print(chain.run(page.text))"
+    "result = chain.run(page.text)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1418"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(result)"
    ]
   },
   {
